--- a/manuscript-air-quality.Rmd
+++ b/manuscript-air-quality.Rmd
@@ -2,13 +2,17 @@
 title: "Manuscript Air Quality"
 author: "Lars Schöbitz"
 date: "17/11/2021"
-output: html_document
+output: 
+  html_document: 
+    toc: yes
+    highlight: espresso
+    theme: flatly
 editor_options: 
   chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 ```
 
 # Background
