Add exercise description

--- a/manuscript-air-quality.Rmd
+++ b/manuscript-air-quality.Rmd
@@ -38,7 +38,7 @@ data_in <- read_csv(data_link)
 
 ```
 
-# Exercise
+# Exercise 1
 
 ```{r transform-summary}
 
@@ -60,4 +60,9 @@ dat_in_sum_day %>%
   datatable()
 
 ```
+
+# Exercise 2
+
+- Can you also reproduce the plot that we created in Unit 2 of application exercise 2?
+
 
